k8s/20-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: url-shortener
spec:
  clusterIP: None
  selector:
    app: redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
